[gd_scene load_steps=5 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://main_ui" path="res://scenes/ui/main_ui.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://sun_icon" path="res://assets/sprites/ui/sun.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://moon_icon" path="res://assets/sprites/ui/moon.svg" id="4"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2400, 1600)
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="SkyLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="SkyGradient" type="ColorRect" parent="SkyLayer"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.5, 0.7, 1, 1)

[node name="Sun" type="Sprite2D" parent="SkyLayer"]
position = Vector2(640, -200)
texture = ExtResource("3")

[node name="Moon" type="Sprite2D" parent="SkyLayer"]
position = Vector2(640, 1200)
texture = ExtResource("4")

[node name="ParkBackground" type="ColorRect" parent="."]
offset_right = 4800.0
offset_bottom = 3200.0
color = Color(0.28, 0.38, 0.22, 1)

[node name="PathwayLayer" type="Node2D" parent="."]

[node name="DistrictLayer" type="Node2D" parent="."]

[node name="HabitLayer" type="Node2D" parent="."]

[node name="UnitLayer" type="Node2D" parent="."]
y_sort_enabled = true

[node name="BubbleLayer" type="Node2D" parent="."]

[node name="AmbientOverlay" type="CanvasModulate" parent="."]
color = Color(1, 1, 1, 1)

[node name="DayUnitSpawn" type="Marker2D" parent="."]
position = Vector2(2400, 1600)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="MainUI" parent="UILayer" instance=ExtResource("2")]
